[package]
name = "solite-drive-game"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
serde_json = "1"
solite = { path = "../..", features = ["winit", "jsx-compiler"] }
tokio = { version = "1", features = ["sync"] }
wgpu = "29"
winit = "0.30"

[build-dependencies]
solite-build = { path = "../../solite-build" }

[dev-dependencies]
image = "0.25"
